# renamore

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md  build.rs
src/: lib.rs  linux-musl.c  linux.rs  macos.rs  tests.rs  windows.rs
