[package]
name = "renamore"
version = "0.3.0"
authors = ["Indiana Kernick <indiana.kernick@gmail.com>"]
description = "More ways to rename files."
categories = ["filesystem"]
keywords = ["rename", "file"]
homepage = "https://github.com/indianakernick/renamore"
repository = "https://github.com/indianakernick/renamore"
documentation = "https://docs.rs/renamore"
readme = "README.md"
license = "MIT OR Apache-2.0"
edition = "2021"

[dev-dependencies]
tempfile = "3"

[build-dependencies]
# It would be nice if the cc dependency could be removed if one of the features
# was enabled but that doesn't seem possible.
cc = "1"
tempfile = "3"

[features]
always-supported = []
always-fallback = []
